--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(QChip8 LANGUAGES C CXX)
 
+# Program
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(CMAKE_AUTOUIC ON)
@@ -39,3 +41,24 @@ add_executable(QChip8
 )
 
 target_link_libraries(QChip8 PRIVATE Qt5::Widgets)
+
+
+# Testing
+enable_testing()
+
+find_package(Qt5Test REQUIRED)
+add_executable(CChip8Tests
+  cputests.cpp
+
+  cchip8/cpu.h
+  cchip8/cpu.c
+  cchip8/instructionset.h
+  cchip8/instructionset.c
+  cchip8/interface.h
+  cchip8/interface.c
+)
+
+add_test(CChip8Tests CChip8Tests)
+
+target_link_libraries(CChip8Tests Qt5::Test)
+
